--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,6 +4,7 @@
 </head>
 <body>
   <nav>
+    <a href="/journals"><i class="fa fa-book" aria-hidden="true"></i> fa-3x &nbsp; journals</a></a>
     <% if (user) { %>
       <a href="/auth/logout">
         <button type="submit">Logout</button>
