--- a/views/journals/edit.ejs
+++ b/views/journals/edit.ejs
@@ -13,12 +13,12 @@
         autocomplete="off"
       >
     </label>
-    <!-- <label>
-      Tasty?
+    <label>
+      Interesting?
       <input 
         type="checkbox" 
-        name="tasty" 
-				<%= journal.tasty ? "checked" : "" %> 
+        name="interesting" 
+				<%= journal.interesting? "checked" : "" %> 
       >
     </label> -->
     <button type="submit">Edit the Journal</button>
