--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,10 @@
 <%- include('./partials/html-head') %>
 <%- include('./partials/nav') %>
 
+<h1> Mind Journal </h1> 
+
 <main>
-  <h1>hello, <%= user ? user.profile.name : "friend" %></h1>
+  <h2>hello, <%= user ? user.profile.name : "friend" %></h2>
   <% if (user?.profile.avatar) { %>
     <div>
       <img 
