--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -4,45 +4,20 @@
 
 <main>
   <h1><%= title %></h1>
-  <p>Please first ensure that the comment is not in the dropdown
+  <p>Make some comments
     <select>
       <% comments.forEach(function(comment) { %> 
-        <option><%= comment.textn %> </option>
+        <option><%= comment.CommtextEntry%> </option>
       <% }) %> 
     </select>
   </p>
 
   <form id="add-comment-form" action="/comments" method="POST">
-    <label for="airport-input">Airport:</label>
-    <input type="text" name="airport" id="airport-input" placeholder="Enter comment here">
+    <label for="CommtextEntry-input">CommtextEntry:</label>
+    <input type="text" name="CommtextEntry" id="CommtextEntry-input" placeholder="Enter comment here">
     <button type="submit">Add comment</button>
-</div>
+
 </form>
-<% if (err) { %>
-  <p>Hey! That textn already exists! Please enter a new one.</p>
-  <% } %>  
-  <div>
-    <p>Please first ensure that the textn is not already listed below:
-      <table>
-        <% let counter = 0 %> 
-        <% comments.forEach(function(comment) { %>
-          <% if (counter === 3){ %>
-            <tr>
-            </tr>
-              <td>
-                <%= comment.comment %>
-              </td>
-          <% counter = 1 %> 
-          <% } else { %>  
-          <td>
-            <%= comment.comment %>
-          </td>
-          <% counter++ %> 
-          <% } %> 
-        <% }) %>
-        </table>
-    </p>
-  </div>
 </main>
 
 <%- include("../partials/footer") %> 
