--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,8 @@
 <%- include('./partials/html-head') %>
 <%- include('./partials/nav') %>
-
+<body>
 <h1> Mind Journal </h1> 
-
+<a href="/journals">Journal List</a>
 <main>
   <h2>hello, <%= user ? user.profile.name : "friend" %></h2>
   <% if (user?.profile.avatar) { %>
@@ -14,5 +14,6 @@
     </div>
   <% } %>
 </main>
+</body>
 
 <%- include('./partials/footer') %>
