--- a/views/journals/index.ejs
+++ b/views/journals/index.ejs
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <title>Mind Journal</title>
+</head>
+<body>
+<link rel="stylesheet" href="/stylesheets/journals/index.css" />
 <%- include('../partials/html-head') %>
 <%- include('../partials/nav') %>
 <main>
